--- a/force-app/main/default/classes/MatchboxUtils.cls
+++ b/force-app/main/default/classes/MatchboxUtils.cls
@@ -1,4 +1,4 @@
-global class MatchboxUtils {
+global with sharing class MatchboxUtils {
     
     /**
      * Runs the matching mechanism batch process
