--- a/force-app/main/default/classes/MatchboxDiversityTest.cls
+++ b/force-app/main/default/classes/MatchboxDiversityTest.cls
@@ -44,14 +44,14 @@ private class MatchboxDiversityTest {
             userList.add( 
                 new User(
                     Alias = 'standt',
-                    Email='standarduser@testorg.com', 
+                    Email='standarduser@example.com', 
                     EmailEncodingKey='UTF-8',
                     LastName='Testing',
                     LanguageLocaleKey='en_US', 
                     LocaleSidKey='en_US',
                     ProfileId = p.Id, 
                     TimeZoneSidKey='America/Los_Angeles',
-                    UserName= (i+1)+'standarduser'+Math.random()+'@testorg.com',
+                    UserName= (i+1)+'standarduser'+Math.random()+'@example.com',
                     City = cityList[cityListIndex],
                     Department = departmentList[departmentListIndex],
                     Title = titleList[titleListIndex]
@@ -180,14 +180,14 @@ private class MatchboxDiversityTest {
             userList.add( 
                 new User(
                     Alias = 'standt',
-                    Email='standarduser@testorg.com', 
+                    Email='standarduser@example.com', 
                     EmailEncodingKey='UTF-8',
                     LastName='Testing',
                     LanguageLocaleKey='en_US', 
                     LocaleSidKey='en_US',
                     ProfileId = p.Id, 
                     TimeZoneSidKey='America/Los_Angeles',
-                    UserName= (i+1)+'standarduser'+Math.random()+'@testorg.com',
+                    UserName= (i+1)+'standarduser'+Math.random()+'@example.com',
                     City = cityList[cityListIndex],
                     Department = departmentList[departmentListIndex],
                     Title = titleList[titleListIndex]
