--- a/force-app/main/default/classes/MatchboxUtilsTest.cls
+++ b/force-app/main/default/classes/MatchboxUtilsTest.cls
@@ -19,14 +19,14 @@ private class MatchboxUtilsTest {
             userList.add( 
                 new User(
                     Alias = 'standt',
-                    Email='standarduser@testorg.com', 
+                    Email='standarduser@example.com', 
                     EmailEncodingKey='UTF-8',
                     LastName='Testing',
                     LanguageLocaleKey='en_US', 
                     LocaleSidKey='en_US',
                     ProfileId = p.Id, 
                     TimeZoneSidKey='America/Los_Angeles',
-                    UserName= (i+1)+'standarduser'+Math.random()+'@testorg.com'
+                    UserName= (i+1)+'standarduser'+Math.random()+'@example.com'
                 )
             );
         }
